<resources>
    <string name="location_took_time">A localização demorou demais para responder</string>
    <string name="error_loading_weather">Erro ao carregar o clima</string>
    <string name="error_network">Erro de conexão. Verifique sua internet.</string>
    <string name="error_loading_iv">Erro ao carregar a imagem</string>
    <string name="error_loading_forecast">Erro ao carregar a previsão </string>
    <string name="app_name">WeatherFeed</string>
    <string name="location_permission_denied">Permissão de localização negada</string>
    <string name="btn_error_message">Tentar novamente</string>
    <string name="tv_feels_like">Sensação térmica: %1$s</string>
    <string name="feels_like">Sensação</string>
    <string name="humidity">Umidade</string>
    <string name="wind">Vento</string>
    <string name="description_iv">Imagem que demonstra o clima</string>
    <string name="preview_temperature">25°</string>
    <string name="preview_condition">Ensolarado</string>
    <string name="preview_feels_like">Sensação térmica: 27°C</string>
    <string name="search">Buscar</string>
    <string name="next_few_days">Próximos dias</string>
    <string name="five_day_forecast">Previsão de 5 dias</string>
    <string name="no_location">Abra a aba Clima para detectarmos sua localização.</string>
    <string name="search_no_results">Nenhuma cidade foi encontrada</string>
    <string name="error_loading_city">Erro ao carregar a cidade</string>
    <string name="preferences">Preferências</string>
    <string name="settings">Configurações</string>
    <string name="app_version">Versão %1$s</string>
    <plurals name="search_results_count">
        <item quantity="one">%1$d resultado</item>
        <item quantity="other">%1$d resultados</item>
    </plurals>
  
</resources>