<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/weather_background_deep">


    <TextView
        android:id="@+id/tv_section_label"
        style="@style/WeatherText.SectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:layout_marginTop="@dimen/weather_spacing_md"
        android:layout_marginStart="@dimen/weather_spacing_md"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_screen_title"
        style="@style/WeatherText.ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/weather_spacing_sm"
        android:layout_marginStart="@dimen/weather_spacing_md"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_section_label" />

    <com.weather.designsystem.xml.WeatherSettingsRowView
        android:id="@+id/row_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/weather_spacing_md"
        android:layout_marginHorizontal="@dimen/weather_spacing_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_screen_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="@dimen/weather_spacing_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WeatherText.Body"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WeatherText.Caption"
            tools:text="Versão 1.0.0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>